# symforge

./: .gitattributes  .gitignore  013-HANDOFF.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SELF_UPDATE_PROCEDURE.md
.cargo/: config.toml
.github/: .release-please-manifest.json  dependabot.yml  release-please-config.json
.github/workflows/: ci.yml  release.yml
docs/: OUTSTANDING-WORK.md  README.md  SYMFORGE_BUGFIX_RESULTS_2026-06-03.md  SYMFORGE_MCP_BUG_REPORT_2026-06-03.md  backlog.md  code-review-2026-05-22.md  dart-parser-investigation.md  external-code-review-prompt.md  grok-dogfood-prompt.md  grok_report.md  ideation.md  live-code-backlog.md  perl-parser-investigation.md  phase1-stel-checkpoint.md  phase2-stel-checkpoint.md  semantic-tier-roadmap.md  stel-architecture.md  stel-assumptions.md  stel-schema.md  v8-aap-integration.md  v8-admin-ui.md  v8-architecture-diagrams.md  v8-bootstrap.md  v8-capability-matrix.md  v8-gap-closure-plan.md  v8-master-plan.md  v8-release-notes.md
docs/archived/: SYMFORGE_BUGFIX_IMPLEMENTATION_PLAN.md  SYMFORGE_MCP_BUG_REPORT_2026-06-03_VERDICTS.md
docs/decisions/: 0015-rtk-trust-gating-symforge-config.md  0017-local-tool-call-analytics.md  README.md
docs/diagrams/: symforge-architecture.drawio  symforge-base-overlay-tobe.drawio  symforge-compact-invoke-sequence.drawio
docs/dogfood/: 2026-07-07-symforge-8.10.7-beta-findings.md  2026-07-12-symforge-8.14.0-full-surface-benchmark-protocol.md  2026-07-12-symforge-8.14.0-full-surface-benchmark-report.md
docs/fixtures/: README.md  routes.golden.jsonl
docs/goals/: symforge-bugfix-campaign.goal.md
docs/ideas/: 2026-05-16-call-time-capability-resolution-goal-task-authoring-prompt.md
docs/notes/: 2026-05-16-call-time-capability-resolution-close-out.md  2026-05-19-srtk12-frecency-read-path-audit.md  2026-05-19-srtk14-integrity-sidecar-scope-decision.md
docs/plans/: 2026-05-12-symforge-stability-hotfix.md  2026-05-15-symforge-post-h-roadmap.md  2026-05-19-rtk-integration-state-for-planning.md  2026-05-19-rtk-task-readiness-code-overlap.md  2026-05-19-symforge-rtk-surgical-code-analysis.md  2026-07-13-token-surface-shakedown.md
docs/research/: 81-index-recall-evidence-index.md  81-index-recall-exit-summary.md  81-index-recall-review-signoff.md  81-index-recall-taxonomy-signoff.md  A-001-measurement-repeatability.md  A-001-tool-battery-run1.json  A-001-tool-battery-run2.json  A-002-manual-spotcheck.md  A-003-harness-shakedown.md  A-003-mcp-shakedown.jsonl  A-004-equiv-audit.md  A-005-compact-stub-proposal.md  A-005-schema-bytes-run2.json  A-005-schema-bytes-summary.md  A-005-schema-bytes.json  A-006-host-schema.md  A-012-bypass-policy.md  A-019-l0-ab-results.json  A-019-l0-surface-choice.md  A-028-golden-routes.md  A-029-django-recall-spike.md  A-029-gap-taxonomy.md  A-029-t2-replay.json  A-029-t2-spawn-residual-ranking-analysis.md  A-029-t2-spike.md  A-029-t2-task-crosswalk.md  A-029-t24-policy-reconsideration.md  A-029-t24-restoration-signoff.md  A-029-tokio-recall-spike.md  A-029-tx01-cap-evidence.md  A-029-tx02-xref-evidence.md  A-029-tx04-tests-evidence.md  A-030-phase-crosswalk.md  G-005-compare-results-preflight.md  G-005-inrepo-preflight.json  a029-t2-results.json  a029-tx01-results.json  a029-tx02-results.json  a029-tx04-results.json  live-eval-2026-06-16.md  (+11 more)
docs/reviews/: 007-review-focus-2026-06-17.md  010-v8-trust-remediation-results.md  012e-RESULTS.md  012f-RESULTS.md  013-findings-ledger.md  2026-07-03-surface-spike-gate.md  2026-07-06-dogfood-findings.md  2026-07-07-symforge-tool-smoke.md  2026-07-07-terminal-commander-findings.md  2026-07-10-claude-workflow-recovered.md  2026-07-10-recovered-findings-local-validation.md  2026-07-10-tool-substitution-scorecard.md  D15-readpath-coherence-migration-plan.md  HANDOFF-symforge-trust-campaign.md  agent-review-plan-2026-06-17.md  d-b0-overlay-search-spec.md  d15-overlay-writer-spec.md  external-review-remediation-2026-06-17.md  full-codebase-review-prompt-2026-06-17.md  overlay-redundancy-decision.md  ponytail-audit-2026-06-17.md  skeptical-senior-review-2026-06-17.md  stel-v8-dogfood-symforge-target-2026-06-19.md  stel-v8-dogfood-targets-2026-06-19.md  stel-v8-field-confirmation-2026-06-19.md  stel-v8-remediation-advice-2026-06-17.md  stel-v8-skeptic-audit-2026-06-17.md  symforge-8.4-facade-friction.md  symforge-defect-ledger.md  v8-architecture-review-codex-resume.md  v8-trust-remediation-ledger.md  (+2 more)
execution/: clone_phase0_corpora.sh  conventional_commits.py  free_runner_disk.sh  release_ops.py  test_conventional_commits.py  test_release_ops.py  test_version_sync.py  version_sync.py
npm/: package.json
plans/: README.md
scripts/: a029-t2-spike.cjs  a029-t21-rg-inventory.cjs  compare-results.cjs  gather-phase0-evidence.ps1  measure-schema-bytes.ps1  phase0-l0-ab-battery.cjs  phase0-mcp-battery.cjs  phase2-compact-battery.cjs  seed-routes-golden.cjs  validate-routes-golden.cjs  verify-tc-findings-fix.ps1  verify-tools.cjs
src/: daemon.rs  embed.rs  git.rs  idempotency.rs  lib.rs  main.rs  path_shadow.rs  paths.rs  process_util.rs  version_registry.rs  watcher_state.rs  worktree.rs
tasks/: lessons.md  todo.md
tests/: aap_detection.rs  aap_harness_preset.rs  admin_aap_api.rs  admin_api_v1.rs  admin_render.rs  admin_system.rs  admin_verb.rs  admission_acceptance.rs  api_keys_store.rs  batch_rename_perf.rs  call_time_cochange.rs  call_time_frecency.rs  capability_evidence.rs  capability_status_integration.rs  cbm_spike_artifact.rs  cbm_spike_graph_bfs.rs  cbm_spike_rust_resolver.rs  ccr_economics.rs  ccr_retrieve.rs  checkpoint.rs  compact_map_ranking.rs  conformance.rs  coupling_calibration.rs  coupling_refresh_generation_fence.rs  daemon_aliases.rs  daemon_singleton.rs  detect_impact.rs  edit_hook_behavior.rs  edit_plan_symbol_line.rs  edit_safety_tee.rs  edit_safety_trust.rs  find_dependents_pass2.rs  frecency_ranking.rs  git_commit_retry.rs  git_temporal_generation_fence.rs  graceful_degradation.rs  graph_bfs_calibration.rs  harness_apply_backup.rs  harness_scan.rs  health_parse_quarantine.rs  (+62 more)
(+605 files in other folders)
